# cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  MakeProject.bat  README.md
src/: main.cpp
src/tests/: testmain.cpp
